--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
         <div class="col s12">
           <h2 class="center-align">Picture</h2>
           <div class="row">
-            <div class="col s3">
+            <div class="col s6 m3">
               <img class="materialboxed" src="assets/img/a1.jpg">
             </div>
-            <div class="col s3">
+            <div class="col s6 m3">
                 <img class="materialboxed" src="assets/img/a2.jpg">
             </div>
-            <div class="col s3">
+            <div class="col s6 m3">
                 <img class="materialboxed" src="assets/img/a3.jpg">
             </div>
-            <div class="col s3">
+            <div class="col s6 m3">
                 <img class="materialboxed" src="assets/img/a4.jpg">
             </div>
           </div>
